[package]
name = "fsblob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
binrw = "0.11.2"
clap = { version = "4.3.5", features = ["derive"] }
clap-num = "1.0.2"
tempfile = "3.6.0"
